src/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: "Lora";
  src: url("/lora.woff2") format("woff2");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@layer base {
  /* Code themes */
  :root {
    --astro-code-color-background: #fdf6e3;
    --astro-code-color-text: #657b83;
    --astro-code-token-constant: #cb4b16;
    --astro-code-token-comment: #93a1a1;
    --astro-code-token-keyword: #859900;
    --astro-code-token-parameter: #cb4b16;
    --astro-code-token-function: #268bd2;
    --astro-code-token-string-expression: #2aa198;

    scroll-behavior: smooth;
  }

  @media (prefers-color-scheme: dark) {
    :root {
      --astro-code-color-background: #24292e;
      --astro-code-color-text: #e1e4e8;
      --astro-code-token-constant: #79b8ff;
      --astro-code-token-keyword: #f97583;
      --astro-code-token-function: #b392f0;
      --astro-code-token-string-expression: #9ecbff;
    }
  }

  html {
  }

  body {
    @apply bg-light font-georgia text-gray-900 dark:bg-dark dark:text-gray-300;
    counter-reset: sidenote-counter;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply font-normal leading-none;
  }

  h1 {
    @apply mb-4 mt-8 text-[3.2rem];
  }

  h2 {
    @apply mb-4 mt-7 text-[2.2rem] italic;
  }

  h3 {
    @apply mb-4 mt-6 text-[1.7rem] italic;
  }

  p,
  ul,
  ol {
    @apply my-4;
  }

  a {
    @apply underline hover:text-gray-400 dark:hover:text-gray-500;
  }

  ul,
  ol {
    @apply ps-6;
  }

  ul {
    @apply list-disc;
  }

  ol {
    @apply list-decimal;
  }

  li {
    @apply mb-1;
  }

  li > ul,
  li > ol {
    @apply my-1 ps-4;
  }

  hr {
    @apply border;
  }

  code,
  kbd,
  samp,
  pre {
    @apply text-sm;
  }

  blockquote {
    @apply border-l-2 pl-4;
  }
}

/* -------------------------- */
/* Sidenotes and margin notes */
/* -------------------------- */

/* TODO: move into layer? What's best practice? */

input.margin-toggle {
  @apply hidden;
}

.sidenote-number {
  counter-increment: sidenote-counter;
}

.sidenote-number:after,
.sidenote:before {
  @apply relative;
  font-family: Times;
}

.sidenote-number:after {
  @apply -top-2 text-sm;
  content: counter(sidenote-counter);
}

.sidenote:before {
  @apply relative -top-[0.375rem] text-sm;
  content: counter(sidenote-counter) " ";
}

.sidenote {
  @apply relative right-0 float-right clear-both -mr-[20vw] mb-4 w-[20vw] pl-8 text-sm;
}

.sidenote > a {
  @apply text-sm;
}

.sidenote > code {
  @apply text-[0.875em] leading-[1.25em];
}

@media (max-width: 1119px) {
  .sidenote-number:after {
    @apply cursor-pointer underline;
  }

  .sidenote {
    @apply hidden;
  }

  .margin-toggle:not(:checked) + .sidenote {
    @apply relative my-4 mr-0 block w-full px-4 text-sm;
  }
}

.astro-code {
  @apply rounded-md p-4;
}

code {
  @apply rounded-md bg-[var(--astro-code-color-background)] p-1;
}

@layer components {
  .title {
    @apply bg-sky bg-contain bg-clip-text bg-center text-transparent dark:bg-roof;
    @apply text-center font-lora text-title font-bold leading-relaxed;
    @apply mb-8 mt-12;
  }

  p.subtitle {
    @apply my-4 block text-[1.8rem] italic leading-none;
  }

  span.newthought {
    font-variant-caps: small-caps;
    @apply text-xl;
  }
}

